# snip-stitch

./: .gitignore  CLAUDE.md  DEVELOP.md  README.md  README.rst  bookend_my_snippet.py  pyproject.toml  snip_stitch.py  tox.ini
.github/workflows/: release.yml  tests.yml
src/bookend_my_snippet/: __init__.py  __main__.py
tests/: conftest.py  test_cli.py
tests/samples/: bashrc  ensure-path
